# viua

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TODO.md  analyze_contrib.py  final_scores.csv  metrics.csv  normalized_metrics.csv
.cargo/: .global-cache
.cargo/registry/cache/rsproxy.cn-e3de039b2554c837/: ansi_colours-1.2.3.crate  anyhow-1.0.103.crate  avif-serialize-0.8.9.crate  bitstream-io-4.10.0.crate  built-0.8.1.crate  bytemuck-1.25.1.crate  cc-1.2.67.crate  console-0.16.4.crate  crossbeam-deque-0.8.7.crate  crossbeam-epoch-0.9.20.crate  crossbeam-utils-0.8.22.crate  exr-1.74.2.crate  imgref-1.12.2.crate  log-0.4.33.crate  no_std_io2-0.9.4.crate  num-bigint-0.4.8.crate  profiling-1.0.18.crate  profiling-procmacros-1.0.18.crate  pulp-0.22.3.crate  pulp-wasm-simd-flag-0.1.1.crate  pxfm-0.1.30.crate  ravif-0.13.0.crate  rgb-0.8.53.crate  rustls-0.23.42.crate  rustls-pki-types-1.15.0.crate  rustversion-1.0.23.crate  smallvec-1.15.2.crate  syn-2.0.118.crate  viuer-0.11.0.crate  wasm-bindgen-0.2.126.crate  wasm-bindgen-macro-0.2.126.crate  wasm-bindgen-macro-support-0.2.126.crate  wasm-bindgen-shared-0.2.126.crate  webpki-roots-1.0.8.crate  yoke-0.8.3.crate  zerocopy-0.8.54.crate  zerocopy-derive-0.8.54.crate  zeroize-1.9.0.crate
.github/workflows/: latex.yml  rust.yml
src/: app.rs  ascii.rs  charset.rs  cli.rs  config.rs  glob.rs  input.rs  main.rs  render.rs
src/ascii/: charset.rs  clahe.rs  lum.rs  mod.rs  sobel.rs
src/render/: ansi.rs  mod.rs
tests/: integration_tests.rs
(+183 files in other folders)
