[package]
name = "viua"
version = "0.1.0"
edition = "2021"
description = "Convert images to ASCII art in the terminal"
license = "MIT"
readme = "README.md"
exclude = ["/.github"]


[dependencies]
image = "0.25"
clap = { version = "4.4", features = ["cargo"] }
crossterm = "0.27"
viuer = { version = "0.11", features = ["print-file", "sixel"] }
ureq = "2.9"
tempfile = "3.9"
glob = "0.3"
gif = "0.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

